--- a/frontend/src/components/Store/PetGachapon/PetGachapon.css
+++ b/frontend/src/components/Store/PetGachapon/PetGachapon.css
@@ -13,7 +13,7 @@
     padding: 0px;
     position: absolute;
     top: 0px;
-    background-color: #f0fae4;
+    background-color: #c9e2bb;
 }
 
 .LoginFormModal-close {
